# VulkanApp

./: .gitignore  .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Event.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Vulkan.kdev4  VulkanApp.kdev4  Window.cpp  Window.hpp  base.hpp  config.h.in  main.cpp  pch.h
res/shaders/: basic.frag  basic.vert
